--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ObjectOlympics.ai</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Corrected link to your CSS file -->
+    <link rel="stylesheet" href="oo.css">
 </head>
 <body>
 
@@ -34,7 +35,8 @@
         <p>© 2025 ObjectOlympics.ai - Your World is the Arena.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Corrected link to your JavaScript file -->
+    <script src="oo.js"></script>
 
 </body>
 </html>
